<resources>
    <string name="app_name">TimeDiff</string>
    <string name="calculate">CALCULATE</string>
    <string name="learn">LEARN</string>
    <string name="clockModeSwitch">CLOCK MODE</string>
    <string name="textOn">24hr</string>
    <string name="textOff">12hr</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="hint">00</string>
    <string name="colon">:</string>
</resources>